# GannetCode

./: INSTALL  KNOWN_ISSUES  README  README_sibu  README_wokam  sync_svn_to_github.pl
Assembler/: bytecodizer.pl  gas.pl
Compiler/: Gannet.cabal  Gannet.hs  Main.hs  README-ghci-debugger.txt  build.pl  src
Compiler/Gannet/: Bytecodizer.hs  IEEE754.hs  Numerifier.hs  Packetizer.hs  Symbolizer.hs  TokenParser.hs  Tokenizer.hs
Compiler/Gannet/Emitters/: Common.hs  ConfigReader.hs  Cormorant.hs  Petrel.hs  Puffin.hs  Skua.hs
Compiler/Gannet/SBA/: ConfigReader.hs  Constants.hs  SystemConfiguration.hs  Types.hs
Compiler/Gannet/State/: Context.hs  Scope.hs  SymbolTree.hs
Compiler/Gannet/Symbolizer/: InferTypes.hs  Internals.hs
Disassembler/: gdis.rb
Gannet-C/: Gannet.pm  Main.hs  README-Gannet-Perl-restrictions-and-limitations.txt  build.sh  clean.sh  cxx-compat.h  dyn_reconf_buf.gc  gannetcc  gannetperl  gen_type_instances_TH.hs  ghc-fix-64bit  monadic_generics_explained.hs  sablecc-3.2.patch  test_basics.pl  test_expressions.gc  test_expressions_list.gc  test_fact.gc  test_file_io.gc  test_file_io.pl  test_let.gc  test_lists.gc  test_nesting.gc  test_read_ast.hs  test_regex.pl  test_seq.pl  test_state_monad.hs
Gannet-C/Gannet/: Service.pm
Gannet-C/GannetC/: AST.hs  Config.hs  EmitG.hs  Emitter.hs  GannetParsec.hs  GenInstances.hs  InstTypes.hs  Parser.hs  PerlParser.hs  PerlServices.hs  TypeMapper.hs
Gannet-C/devel/: ASTDisplay.java  Calculate.java  Context.java  TODO  (+22 more)
Gannet-Perl/: .project  Gannet.pm  README-Gannet-Perl-restrictions-and-limitations.txt  TODO  TODO-compiling-running-Gannet-Perl.txt  build.sh  clean.sh  gannet-perl-API.txt  gannetperl  matmult.pl  test_basics.pl  test_blocks.pl  test_file_io.pl  test_hash.pl  test_seq.pl
Garnet/: .sconsign.dblite  SConstruct.Generate_SC_SBA.py  SConstruct.ServiceCoreLibray.py  SConstruct.SystemConfiguration.py  ServiceConfiguration.yml  garnet.rb
SystemConfigurations/: Control.SBA.yml  ConwayLife.yml  DCT.SBA.yml  DynConfig.SBA.yml  DynMatrixMORA.SBA.yml  DynSobel.SBA.yml  GannetC.SBA.yml  ImgOO.SBA.yml  MatrixPipeline.SBA.yml  Perl.SBA.yml  Perl.SBAnew.yml  SBA.yml  SBAnew.yml  SysCSobel.SBA.yml  SysCSobelDynNoStream.SBA.yml  SysCSobelDynRefNoStream.SBA.yml  SysCSobelStaticNoStream.SBA.yml
doc/: about.txt  creating_services.txt  docs.txt  download.txt  examples.txt  gannet_overview.txt  index.txt  presentations.txt  programming_gannet.txt  using_gannet.txt
etc/: gannetrc
examples/: test.gas  test_fp.gas
t/: 569.raw  569.xpm  Gannet-MORA.txt  YCbCr2RGB_test.cc  debug_streaming_single_service.td  dyn_add.rb  dyn_alu.rb  dyn_madd.rb  dyn_mirror.rb  dyn_mult.rb  dyn_reconf_sobel.td  dyn_rgb2ycbcr.rb  dyn_sobel.rb  dyn_ycbcr2rgb.rb  dyn_ycbcr2rgb_test.rb  gannet  gannet16.raw  gannet32.raw  lambda_bug.td  lambda_rec_bug.td  lena_std.raw  lena_std.xpm  let_assign.td  let_assign1.td  let_assign_simple.td  let_assign_unique.td  proc_sim.pl  simple_alu.td  simple_lambda.td  sobel_dyn.td  tategami.raw  tategami.xpm  test_IOREAD.td  test_alu.td  test_alu_42.td  test_alu_flt.td  test_alu_int.td  test_alu_int2.td  test_alu_int3.td  test_assign_letvar.td  (+100 more)
util/: build.pl  byc2c.rb  clean_rb.pl  color2grayxpm.pl  create_Cxx_SystemConfiguration.rb  gen_random_tests_from_grammar.pl  plot_rgbimage.pl  process_systemc_sim_log.pl  r2n.pl  r2n.yml  xpm2raw.pl
(+416 files in other folders)
