Name: Gannet
Version: 0.1
Cabal-Version: >= 1.2
Build-Type: Simple
License: GPL
License-file: ../LICENSE
Author: Wim Vanderbauwhede
Maintainer: Wim.Vanderbauwhede@gmail.com
Homepage: www.gannetcode.org
Category: Compilers
Description: Gannet is a functional language to program data flows in Systems-on-Chip. The compiler generates the bytecode for the Gannet machine, a distributed reduction machine. For more info see <http://www.gannetcode.org>.
Synopsis: Compiler for the Gannet System-on-Chip language
Build-Depends: mtl, base, containers, parsec, pugs-HsSyck == 0.2
GHC-Options: -fglasgow-exts 
-- Exposed-Modules: Gannet.Tokenizer, Gannet.Symbolizer, Gannet.Packetizer, Gannet.Bytecodizer
Exposed-Modules: Gannet.SBA.Types Gannet.SBA.SystemConfiguration Gannet.State.SymbolTree Gannet.State.Context Gannet.State.Scope Gannet.Tokenizer Gannet.TokenParser Gannet.Packetizer Gannet.Symbolizer Gannet.Symbolizer.InferTypes Gannet.Numerifier Gannet.Symbolizer.Internals Gannet.Bytecodizer Gannet.Emitters.Puffin

Executable: gannetc
Main-is: Main.hs
Hs-Source-Dirs: .

Extensions: CPP
